# surfnet

./: .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  NEWREADME.md  README.md  T1-1080-px.MP4:Zone.Identifier  boxplot  build_synthetic_videos.py  bump.json  bump.py  environment.yml  environment_centernet_DCN.yml  environment_deeplab.yml  eval.py  extract_and_save_heatmaps.py  extract_dense_flow_for_video.py  extract_gps_from_vid.py  fuse_annotations.py  gt.txt  gt1.txt  gt2.txt  ia-pau-4.ipynb  nohup.out  overlay_tracking_results_on_video.py  part_1_segments.txt  plot.py  plot_pickle_file.py  plots.py  preprocess_video_dataset.py  process_before_eval.py  profile_dataset.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.py  (+14 more)
.github/workflows/: prerelease.yml  release.yml  tests.yml
IAPAU4/yolo_ia_pau_4/: hyp.yaml  (+9 more)
annotations-surfnet/: bounding_boxes_202201241119.csv  images_for_labelling_202201241120.csv  instances_train.json  instances_val.json
app_demo_livrable/: build.gradle
base/: losses.py
common/: surfrider_to_coco_converter.py  utils.py
data/: .gitignore  download_small_dataset.sh  download_surfrider_images.sh  download_synthetic_objects.sh  download_synthetic_videos.sh  download_validation_videos.sh
doc/: conversion.md  description.md  implementations.md  misc_quantified.py  mobilenetv3_quantified.py
docs/: Makefile  conf.py
extension/: datasets.py  losses.py  models.py
external_pretrained_models/: download_pretrained_base.sh
k8s/: kubectl.sh  surfnet-aks.yaml  surfnet-gke.yaml  surfnet.yaml
labels/: 1020-img2731.txt  1024-img3928.txt  1036-cbb9fc4d-06a8-49f9-bd0b-dad10f5b5cd2(2).txt  1038-img663.txt  1041-img3476.txt  1047-img837.txt  105-img67.txt  108-img1499.txt  1081-img486.txt  1084-img1369.txt  1106-f2403431-c4a5-402a-b04a-f0628baec0a9(5).txt  1108-img934.txt  113-img2723.txt  1175-img331.txt  1217-img93.txt  1227-img208.txt  1233-img1544.txt  1255-img(158).txt  1257-img995.txt  1289-img1234.txt  1296-img54.txt  131-img3541.txt  132-5b677166-1751-49db-bcfa-a330f27db2c9(44).txt  1322-img1799.txt  1326-5a171e30-2906-42db-9122-f983da1cd869(18).txt  1327-img1331.txt  1350-img1379.txt  1352-img3953.txt  1356-img1096.txt  136-4aa8dda8-4105-445a-a81d-79563138a3fe(2).txt  136-img3435.txt  138-img3699.txt  1389-img(206).txt  1394-img1271.txt  1397-img3462.txt  142-img590.txt  1423-img2809.txt  1426-img1725.txt  1427-img3943.txt  1434-85df8e42-51a6-4505-9a41-3aceba9871ad(14).txt  (+243 more)
models/: .gitignore  download_pretrained_base.sh
notebooks/: 2.0.0_Bene_version.ipynb  Charles_version.ipynb
scripts/: count_objects.sh  detect.sh  extract_heatmaps.sh  filter_from_smoothing.sh  filter_tracks_for_files.sh  generate_videos.sh  init_shell_variables.sh  move_files_to_trackeval.sh  overlay_mot_gt_on_videos.sh  overlay_mot_on_videos.sh  overlay_mot_results_on_video.sh  overlay_results_on_videos.sh  postprocess_prod.sh  remap_ids_for_files.sh  serving_prod.sh  shell_variables.sh  smooth_tracks_for_files.sh  threshold_tracks_for_files.sh  track.sh  track_all_external.sh  track_external_detections.sh  track_from_heatmaps.sh  track_prod.sh  train_base.sh  train_detector.sh  train_extension.sh
scripts_for_experiments/: extract_frames.sh  extract_heatmaps.sh  fuse_annotations.sh  generate_videos.sh  init_shell_variables.sh  track.sh  track_external_dets.sh  track_external_dets_2.sh  track_external_vid_file.sh  track_vid_file_internal.sh  train_base.sh  train_base_debug.sh  train_base_from_synthetic_videos.sh  train_base_video_frames.sh  train_extension.sh  train_extension_debug.sh
src/: build_mot_for_real_videos.py  build_synthetic_videos.py  convert.py  count_video_objects.py  detect.py  eval.py  extract_and_save_heatmaps.py  extract_heatmaps_for_video.py  filter_tracks.py  fuse_mot_annotations.py  generate_box_plots.py  image_embeddings.py  load_dataset.py  misc.py  mkdocs.yml  overlay_tracking_results_on_video.py  postprocess_and_count_tracks.py  preprocess_video_dataset.py  profiling.py  remap_ids.py  render_video.py  smooth_tracks.py  test.py  threshold_tracks.py  track.py  train_base.py  train_base_deeplab.py  train_detector.py  train_extension.py  visualize_dataset.py  visualize_network.py  warp_flow.py
synthetic_videos/: build_synthetic_video.py  build_synthetic_videos.py  flow_tools.py  taco_tools.py  utils.py
temp/: Makefile  pyproject.toml  requirements.txt  setup.py
tests/: test_create_images.py  test_create_n_trash.py  test_extract_imgs.py
tracking/: trackers.py  utils.py
training/: Makefile  pyproject.toml  requirements.txt  setup.py
training/notebooks/: Charles_version.ipynb
training/notebooks/csv/: df_bboxes.csv  images_for_labelling_202206171635.csv
training/notebooks/pickle/: imgs_with_bboxes.pickle
training/reports/figures/: figures_readme.md
training/src/surfnet_train/data/: data_processing.py  make_dataset2.py
training/src/surfnet_train/datasets/: datasets.py  new_surfrider_db_to_coco_converter.py  val.txt  visualize_coco_boxes.py
training/src/surfnet_train/models/: path_existance.py
training/src/surfnet_train/visualization/: categories.py
training/tests/test_surfnet_train/data/: test_data_processing.py
training/tests/test_surfnet_train/utils/data/: file.json
yolo_ia_pau_4/: events.out.tfevents.1646321281.MSI.21692.0
(+1769 files in other folders)
