[tool.poetry]
name = "plastic-origins"
version = "1.0.0-alpha.0"
description = "A package containing methods commonly used to make inferences"
authors = ["Chayma Mesbahi <chayma.mesbahi@neoxia.com>"]
license = "MIT"

packages = [
    { include = "plasticorigins", from = "src" },
]

[tool.poetry.dependencies]
python = "3.8"
opencv-python = "4.5.5.62"
pycocotools = "2.0.4"
debugpy = "1.5.1"
scipy = "1.7.3"
tqdm = "4.62.3"
imgaug = "0.4.0"
psycopg2-binary = "2.8.5"
Flask = "2.0.3"
Werkzeug = "2.0.3"
gunicorn = "19.10.0"
torch = "1.10.1"
torchvision = "0.11.2"
scikit-video = "^1.1.11"
pykalman = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"

# coverage configuration
[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["plasticorigins","serving"]
omit = ["src/plasticorigins/detection/centernet/networks/dlav0.py",
        "src/plasticorigins/detection/centernet/networks/large_hourglass.py",
        "src/plasticorigins/detection/centernet/networks/msra_resnet.py",
        "src/plasticorigins/detection/centernet/networks/pose_dla_dcn.py",
        "src/plasticorigins/detection/centernet/networks/resnet_dcn.py"]

[tool.coverage.report]
show_missing = true
fail_under = 10

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
